# r2e_results

race_to_expiry_chtc/: CMakeCache.txt  Makefile  cmake_install.cmake  traced_spendthrift_model_retrained.pt  traced_spendthrift_model_updated.pt
race_to_expiry_chtc/eh-sim/: CMakeLists.txt  Makefile  cmake_install.cmake  eh-sim
race_to_expiry_chtc/eh-sim/libtorch/: build-hash  build-version
race_to_expiry_chtc/eh-sim/libtorch/include/ATen/: Functions.h  NativeFunctions.h
race_to_expiry_chtc/eh-sim/libtorch/include/caffe2/core/: macros.h
race_to_expiry_chtc/eh-sim/libtorch/share/cmake/Torch/: TorchConfig.cmake
race_to_expiry_chtc/eh-sim/src/: liveness_trace.cpp  liveness_trace.hpp  main.cpp  simulate.cpp  simulate.hpp  stats.hpp  voltage_trace.cpp
race_to_expiry_chtc/eh-sim/src/scheme/: backup_every_cycle.hpp  cache_energy_params.txt  clank.hpp  data_sheet.hpp  eh_scheme.hpp  magical_scheme.hpp  mem_rename.hpp  on_demand_all_backup.hpp  parametric.hpp  rf_bloomfilter_params.txt
race_to_expiry_chtc/prediction/: predict.py
race_to_expiry_chtc/scripts/: plot.py  run.py  run2.py  run3.py  run4.py  run5.py  run6.py  run7.py  run8.py  run9.py  traced_spendthrift_model_latest.pt
race_to_expiry_chtc/thumbulator/: CMakeLists.txt  Makefile  cmake_install.cmake
result_mar28/adpcm_decode/: rte_5664199_0.out  rte_5664200_0.out  rte_5664207_0.out  rte_5664212_0.out  rte_5664213_0.err  rte_5664213_0.out  rte_5664214_0.out
result_mar28/adpcm_encode/: rte_5664199_1.out  rte_5664200_1.err  rte_5664200_1.out  rte_5664207_1.out  rte_5664212_1.out  rte_5664214_1.out
(+300 files in other folders)
